--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,11 +56,16 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build Project.xml linux --app-version="4.0.0-${{ github.run_id}}"
-      - name: Publish Artifact
+      - name: Publish Binary
         uses: actions/upload-artifact@v2.2.4
         with:
           name: linuxBuild
           path: 'export/release/linux/bin'
+      - name: Publish C++ objects
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: linuxObj
+          path: 'export/release/linux/obj'    
   buildWindows:
     runs-on: windows-latest
 
@@ -98,11 +103,16 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build windows --app-version="4.0.0-${{ github.run_id}}"
-      - name: Publish Artifact
+      - name: Publish Binary
         uses: actions/upload-artifact@v2.2.4
         with:
           name: windowsBuild
           path: export/release/windows/bin
+      - name: Publish C++ objects
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: windowsObj
+          path: export/release/windows/obj   
   buildMac:
     runs-on: macos-latest
 
@@ -139,8 +149,13 @@ jobs:
         run: echo "${{github.run_id}}" > VERSION
       - name: Compile
         run: haxelib run lime build mac --app-version="4.0.0-${{ github.run_id}}"
-      - name: Publish Artifact
+      - name: Publish Binary
         uses: actions/upload-artifact@v2.2.4
         with:
           name: macBuild
           path: export/release/macos/bin
+      - name: Publish C++ objects
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: macObj
+          path: export/release/macos/obj          
