--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ export/*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.github/ISSUE_TEMPLATE/desktop.ini
+art/flashFiles/desktop.ini
+*.ini
